准备添加数据的自定义绘制

--- a/Dot/DotEditor/DotEditor.csproj
+++ b/Dot/DotEditor/DotEditor.csproj
@@ -101,6 +101,34 @@
     <Compile Include="GUIExtension\Windows\PopupWindow.cs" />
     <Compile Include="Map\Item\ItemBehaviourEditor.cs" />
     <Compile Include="Map\Lightmap\SceneLightmapBaker.cs" />
+    <Compile Include="NativeDrawer\AttrNativeDrawer.cs" />
+    <Compile Include="NativeDrawer\CustomAttDrawerLinkAttribute.cs" />
+    <Compile Include="NativeDrawer\Decorator\BoxedHeaderDrawer.cs" />
+    <Compile Include="NativeDrawer\Decorator\DecoratorDrawer.cs" />
+    <Compile Include="NativeDrawer\Decorator\HelpDrawer.cs" />
+    <Compile Include="NativeDrawer\Layout\BeginGroupDrawer.cs" />
+    <Compile Include="NativeDrawer\Layout\BeginHorizontalDrawer.cs" />
+    <Compile Include="NativeDrawer\Layout\BeginIndentDrawer.cs" />
+    <Compile Include="NativeDrawer\Layout\EndGroupDrawer.cs" />
+    <Compile Include="NativeDrawer\Layout\EndHorizontalDrawer.cs" />
+    <Compile Include="NativeDrawer\Layout\EndIndentDrawer.cs" />
+    <Compile Include="NativeDrawer\Layout\LayoutDrawer.cs" />
+    <Compile Include="NativeDrawer\Property\Control\IndentDrawer.cs" />
+    <Compile Include="NativeDrawer\Property\Control\ReadonlyDrawer.cs" />
+    <Compile Include="NativeDrawer\Property\Label\HideLabelDrawer.cs" />
+    <Compile Include="NativeDrawer\Property\Label\NewLabelDrawer.cs" />
+    <Compile Include="NativeDrawer\Property\PropertyDrawer.cs" />
+    <Compile Include="NativeDrawer\Property\FloatSliderDrawer.cs" />
+    <Compile Include="NativeDrawer\TypeDrawer.cs" />
+    <Compile Include="NativeDrawer\FieldDrawer.cs" />
+    <Compile Include="NativeDrawer\ObjectNativeDrawer.cs" />
+    <Compile Include="NativeDrawer\Verification\NotNullDrawer.cs" />
+    <Compile Include="NativeDrawer\Verification\VerificationDrawer.cs" />
+    <Compile Include="NativeDrawer\Visible\HideDrawer.cs" />
+    <Compile Include="NativeDrawer\Visible\HideIfDrawer.cs" />
+    <Compile Include="NativeDrawer\Visible\ShowDrawer.cs" />
+    <Compile Include="NativeDrawer\Visible\ShowIfDrawer.cs" />
+    <Compile Include="NativeDrawer\Visible\VisibleDrawer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TreeGUI\TreeElement.cs" />
     <Compile Include="TreeGUI\TreeElementUtility.cs" />
