--- a/Dot/DotEngine/DotEngine.csproj
+++ b/Dot/DotEngine/DotEngine.csproj
@@ -110,6 +110,32 @@
     <Compile Include="Entity\Node\NodeBehaviour.cs" />
     <Compile Include="Entity\Node\NodeData.cs" />
     <Compile Include="Entity\Node\NodeType.cs" />
+    <Compile Include="NativeDrawer\Decorator\BoxedHeaderAttribute.cs" />
+    <Compile Include="NativeDrawer\Decorator\DecoratorAttribute.cs" />
+    <Compile Include="NativeDrawer\Decorator\HelpAttribute.cs" />
+    <Compile Include="NativeDrawer\Layout\BeginGroupAttribute.cs" />
+    <Compile Include="NativeDrawer\Layout\BeginHorizontalAttribute.cs" />
+    <Compile Include="NativeDrawer\Layout\BeginIndentAttribute.cs" />
+    <Compile Include="NativeDrawer\Layout\EndGroupAttribute.cs" />
+    <Compile Include="NativeDrawer\Layout\EndHorizontalAttribute.cs" />
+    <Compile Include="NativeDrawer\Layout\EndIndentAttribute.cs" />
+    <Compile Include="NativeDrawer\Layout\LayoutAttribute.cs" />
+    <Compile Include="NativeDrawer\NativeConditionDrawerAttribute.cs" />
+    <Compile Include="NativeDrawer\NativeDrawerAttribute.cs" />
+    <Compile Include="NativeDrawer\Property\Control\IndentAttribute.cs" />
+    <Compile Include="NativeDrawer\Property\Control\ReadonlyAttribute.cs" />
+    <Compile Include="NativeDrawer\Property\EnumButtonAttribute.cs" />
+    <Compile Include="NativeDrawer\Property\Label\HideLabelAttribute.cs" />
+    <Compile Include="NativeDrawer\Property\Label\NewLabelAttribute.cs" />
+    <Compile Include="NativeDrawer\Property\PropertyAttribute.cs" />
+    <Compile Include="NativeDrawer\Property\FloatSliderAttribute.cs" />
+    <Compile Include="NativeDrawer\Verification\NotNullAttribute.cs" />
+    <Compile Include="NativeDrawer\Verification\VerificationAttribute.cs" />
+    <Compile Include="NativeDrawer\Visible\HideAttribute.cs" />
+    <Compile Include="NativeDrawer\Visible\HideIfAttribute.cs" />
+    <Compile Include="NativeDrawer\Visible\ShowAttribute.cs" />
+    <Compile Include="NativeDrawer\Visible\ShowIfAttribute.cs" />
+    <Compile Include="NativeDrawer\Visible\VisiableAtrribute.cs" />
     <Compile Include="Proxy\StartupProxy.cs" />
     <Compile Include="Utilities\StringUtility.cs" />
     <Compile Include="Extension\TransformExtensions.cs" />
@@ -122,31 +148,6 @@
     <Compile Include="GOPool\GameObjectPoolGroup.cs" />
     <Compile Include="GOPool\GameObjectPoolItem.cs" />
     <Compile Include="GOPool\GameObjectPoolManager.cs" />
-    <Compile Include="GUI\Drawer\ConditionDrawerAttribute.cs" />
-    <Compile Include="GUI\Drawer\Decorator\BoxedHeaderAttribute.cs" />
-    <Compile Include="GUI\Drawer\Decorator\DecoratorAttribute.cs" />
-    <Compile Include="GUI\Drawer\Decorator\HelpAttribute.cs" />
-    <Compile Include="GUI\Drawer\DrawerAttribute.cs" />
-    <Compile Include="GUI\Drawer\Layout\BeginGroupAttribute.cs" />
-    <Compile Include="GUI\Drawer\Layout\BeginHorizontalAttribute.cs" />
-    <Compile Include="GUI\Drawer\Layout\BeginIndentAttribute.cs" />
-    <Compile Include="GUI\Drawer\Layout\EndGroupAttribute.cs" />
-    <Compile Include="GUI\Drawer\Layout\EndHorizontalAttribute.cs" />
-    <Compile Include="GUI\Drawer\Layout\EndIndentAttribute.cs" />
-    <Compile Include="GUI\Drawer\Layout\LayoutAttribute.cs" />
-    <Compile Include="GUI\Drawer\Property\Control\IndentAttribute.cs" />
-    <Compile Include="GUI\Drawer\Property\Control\ReadonlyAttribute.cs" />
-    <Compile Include="GUI\Drawer\Property\EnumButtonAttribute.cs" />
-    <Compile Include="GUI\Drawer\Property\Label\HideLabelAttribute.cs" />
-    <Compile Include="GUI\Drawer\Property\Label\NewLabelAttribute.cs" />
-    <Compile Include="GUI\Drawer\Property\PropertyAttribute.cs" />
-    <Compile Include="GUI\Drawer\Verification\NotNullAttribute.cs" />
-    <Compile Include="GUI\Drawer\Verification\VerificationAttribute.cs" />
-    <Compile Include="GUI\Drawer\Visible\HideAttribute.cs" />
-    <Compile Include="GUI\Drawer\Visible\HideIfAttribute.cs" />
-    <Compile Include="GUI\Drawer\Visible\ShowAttribute.cs" />
-    <Compile Include="GUI\Drawer\Visible\ShowIfAttribute.cs" />
-    <Compile Include="GUI\Drawer\Visible\VisiableAtrribute.cs" />
     <Compile Include="Log\ILog.cs" />
     <Compile Include="Line\Bezier\BezierUtility.cs" />
     <Compile Include="Line\CatmullRom\CatmullRomUtility.cs" />
@@ -205,6 +206,7 @@
     <Compile Include="Utilities\ReflectionUtility.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="GUI\" />
     <Folder Include="Lua\" />
     <Folder Include="Timeline\" />
     <Folder Include="UI\" />
