--- a/Dot/DotEditor/DotEditor.csproj
+++ b/Dot/DotEditor/DotEditor.csproj
@@ -111,6 +111,7 @@
     <Compile Include="NativeDrawer\DefaultTypeDrawer\DefaultStringDrawer.cs" />
     <Compile Include="NativeDrawer\DefaultTypeDrawer\DefaultVector2Drawer.cs" />
     <Compile Include="NativeDrawer\DefaultTypeDrawer\DefaultVector3Drawer.cs" />
+    <Compile Include="NativeDrawer\NativeDrawerSetting.cs" />
     <Compile Include="NativeDrawer\NativeTypeDrawer.cs" />
     <Compile Include="NativeDrawer\Layout\BeginGroupDrawer.cs" />
     <Compile Include="NativeDrawer\Layout\BeginHorizontalDrawer.cs" />
