添加数值改变后的侦听，同时修改Visible的条件判断为可以指定比较符号

--- a/Dot/DotEditor/DotEditor.csproj
+++ b/Dot/DotEditor/DotEditor.csproj
@@ -111,6 +111,8 @@
     <Compile Include="NativeDrawer\DefaultTypeDrawer\DefaultStringDrawer.cs" />
     <Compile Include="NativeDrawer\DefaultTypeDrawer\DefaultVector2Drawer.cs" />
     <Compile Include="NativeDrawer\DefaultTypeDrawer\DefaultVector3Drawer.cs" />
+    <Compile Include="NativeDrawer\Listener\ListenerDrawer.cs" />
+    <Compile Include="NativeDrawer\Listener\OnValueChangedDrawer.cs" />
     <Compile Include="NativeDrawer\NativeDrawerSetting.cs" />
     <Compile Include="NativeDrawer\NativeTypeDrawer.cs" />
     <Compile Include="NativeDrawer\Layout\BeginGroupDrawer.cs" />
