--- a/Dot/DotEngine/DotEngine.csproj
+++ b/Dot/DotEngine/DotEngine.csproj
@@ -111,6 +111,7 @@
     <Compile Include="NativeDrawer\Decorator\BoxedHeaderAttribute.cs" />
     <Compile Include="NativeDrawer\Decorator\DecoratorAttribute.cs" />
     <Compile Include="NativeDrawer\Decorator\HelpAttribute.cs" />
+    <Compile Include="NativeDrawer\Decorator\SeparatorLineAttribute.cs" />
     <Compile Include="NativeDrawer\Layout\BeginGroupAttribute.cs" />
     <Compile Include="NativeDrawer\Layout\BeginHorizontalAttribute.cs" />
     <Compile Include="NativeDrawer\Layout\BeginIndentAttribute.cs" />
@@ -125,6 +126,7 @@
     <Compile Include="NativeDrawer\Property\Control\IndentAttribute.cs" />
     <Compile Include="NativeDrawer\Property\Control\ReadonlyAttribute.cs" />
     <Compile Include="NativeDrawer\Property\EnumButtonAttribute.cs" />
+    <Compile Include="NativeDrawer\Property\FilePathAttribute.cs" />
     <Compile Include="NativeDrawer\Property\Label\HideLabelAttribute.cs" />
     <Compile Include="NativeDrawer\Property\Label\NewLabelAttribute.cs" />
     <Compile Include="NativeDrawer\Property\MultilineTextAttribute.cs" />
