New:添加Enity结点相关的内容，同时添加对应的编辑器功能

--- a/Dot/DotEditor/DotEditor.csproj
+++ b/Dot/DotEditor/DotEditor.csproj
@@ -178,4 +178,10 @@
     <Folder Include="UI\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>xcopy $(TargetDir)DotEditor.dll $(SolutionDir)..\DotProject\Assets\DotEngine\Editor /Y
+xcopy $(TargetDir)DotEditor.pdb $(SolutionDir)..\DotProject\Assets\DotEngine\Editor /Y
+xcopy $(TargetDir)DotEngine.dll $(SolutionDir)..\DotProject\Assets\DotEngine /Y
+xcopy $(TargetDir)DotEngine.pdb $(SolutionDir)..\DotProject\Assets\DotEngine /Y</PostBuildEvent>
+  </PropertyGroup>
 </Project>
