调整Avatar部件的实现及准备处理编辑器

--- a/Dot/DotEditor/DotEditor.csproj
+++ b/Dot/DotEditor/DotEditor.csproj
@@ -76,6 +76,9 @@
     <Compile Include="Config\Ini\IniConfigWindow.cs" />
     <Compile Include="EditorStyleViewer\BuiltInResourcesWindow.cs" />
     <Compile Include="EditorStyleViewer\EditorStyleViewer.cs" />
+    <Compile Include="Entity\Avatar\AvatarCreatorData.cs" />
+    <Compile Include="Entity\Avatar\AvatarCreatorDataEditor.cs" />
+    <Compile Include="Entity\Avatar\AvatarCreatorWindow.cs" />
     <Compile Include="Entity\Node\NodeBehaviourEditor.cs" />
     <Compile Include="GUIExtension\ColorfullFolders\FavouriteFolderConfig.cs" />
     <Compile Include="GUIExtension\ColorfullFolders\FavouriteFolderConfigEditor.cs" />
