--- a/Dot/DotEditor/DotEditor.csproj
+++ b/Dot/DotEditor/DotEditor.csproj
@@ -144,6 +144,7 @@
     <Compile Include="NativeDrawer\Property\Label\HideLabelDrawer.cs" />
     <Compile Include="NativeDrawer\Property\Label\NewLabelDrawer.cs" />
     <Compile Include="NativeDrawer\Property\MultilineTextDrawer.cs" />
+    <Compile Include="NativeDrawer\Property\OpenFolderPathDrawer.cs" />
     <Compile Include="NativeDrawer\Property\PropertyDrawer.cs" />
     <Compile Include="NativeDrawer\Property\FloatSliderDrawer.cs" />
     <Compile Include="NativeDrawer\Property\StringPopupDrawer.cs" />
