New:添加Avatar的预览

--- a/Dot/DotEditor/DotEditor.csproj
+++ b/Dot/DotEditor/DotEditor.csproj
@@ -81,7 +81,8 @@
     <Compile Include="Entity\Avatar\AvatarCreatorUtil.cs" />
     <Compile Include="Entity\Avatar\AvatarCreatorWindow.cs" />
     <Compile Include="Entity\Avatar\AvatarPartDataEditor.cs" />
-    <Compile Include="Entity\Avatar\PartCreatorDataDrawer.cs" />
+    <Compile Include="Entity\Avatar\AvatarPartCreatorDataDrawer.cs" />
+    <Compile Include="Entity\Avatar\AvatarPreviewer.cs" />
     <Compile Include="Entity\Node\NodeBehaviourEditor.cs" />
     <Compile Include="Entity\Node\NodeBehaviourUtil.cs" />
     <Compile Include="GUIExtension\ColorfullFolders\FavouriteFolderConfig.cs" />
